--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "cross-env": "^7.0.2",
+    "express-session": "^1.17.1",
     "mysql": "^2.18.1",
     "nanoid": "^3.1.16",
     "nodemon": "^2.0.4",
